# ArmOpenCV

./: CMakeLists.txt  LICENSE  README.md  run.sh
src/: main.cpp
